# point_cloud

./: .gitignore  README.md
hw1/pythonproject/: cloud_lesson.yml  off_to_ply.py  pca_normal.py  requirements  test2.py  voxel_filter.py
hw2/build-knn_with_tree-Desktop-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  knn  knn_with_tree.cbp  rules.ninja
hw2/knn_with_tree/: CMakeLists.txt
hw2/knn_with_tree/include/: KnnResultSet.h  kdtree.h  node.h  octant.h  octree.h
hw2/knn_with_tree/src/: binToPcd.cpp  kdtree.cpp  knn_demo.cpp
hw2/lesson2code/test_project/: benchmark.py  octree.py
hw2/velodyne/pcd/: 0000000001.pcd  0000000002.pcd  0000000005.pcd  0000000006.pcd  0000000007.pcd  0000000008.pcd  0000000009.pcd  0000000010.pcd  0000000012.pcd  0000000013.pcd  0000000014.pcd  0000000015.pcd  0000000016.pcd  0000000019.pcd  0000000020.pcd  0000000021.pcd
hw4/model_fitting/: cluster_index.txt  clustering.py  non_ground_indicess_20.txt
hw4/model_fitting/experiment_data/: cluster_index.txt  non_ground_indicess_20.txt
hw4/model_fitting/experiment_data/0.2-30-16/: cluster_index.txt
hw4/model_fitting/experiment_data/0.2-50-16gut/: cluster_index.txt  non_ground_indicess_20.txt
hw4/model_fitting/experiment_data/0.23-40-20/: cluster_index.txt  non_ground_indicess_20.txt
hw4/model_fitting/experiment_data/0.23_30/: cluster_index.txt  non_ground_indicess_20.txt
hw4/model_fitting/experiment_data/0.25-50-22/: cluster_index.txt
hw4/model_fitting/perfect_result/: cluster_index.txt  non_ground_indicess_20.txt
(+19 files in other folders)
